testsuite/poke.pkl/unmap-diag-1.pk
/* { dg-do compile } */

fun lala = (any a) any: {
  return unmap a; /* { dg-error "invalid operand.*\n.*expected a mappable value" } */
}
